--- a/index.Rmd
+++ b/index.Rmd
@@ -37,8 +37,13 @@ Both the training and the testing datasest need to be pre-processed in the same 
 ```{r prep2, eval=FALSE}
 str(training) # the dplyr package included in tidyverse provides a prettier and more structured output than the base function str()
 summary(training)
+
+dim(training)
+dim(testing)
+
 names(training)
 names(testing) # the testing set doesn't include the classe variable
+
 ```
 We can see that the `classe` variable is of class character. We need to convert it to class factor, so that it can be handled as a categorical variable.
 
@@ -137,8 +142,15 @@ model3 <- train(classe ~., data = train_data, trControl = train_control3, method
 model_boost <- train(classe ~., data = train_data, method = "gbm", verbose = FALSE)
 ```
 
+### **In-sample error**
+```{r insample, eval=FALSE}
+confusionMatrix(model10) #99% accuracy
+confusionMatrix(model3) #96% accuracy
+confusionMatrix(model_boost) #86% accuracy
+```
+
 ## **Prediction**  
-The random forest model with 10-fold cross-validation provides the highest accuracy, more than 99%, but takes a very long time to compute. The boosting model is even more computationally demanding and provides less accuracy than both the 3-fold and 10-fold cross-validation random forest models. For this prediction, we are going to use the 10-fold model, however, the difference between the 3 and 10 folds is not big when talking about accuracy, but significant when talking about computing time. 
+The random forest model with 10-fold cross-validation provides the highest accuracy, more than 99%, but takes a very long time to compute. The boosting model is even more computationally demanding and provides less accuracy than both the 3-fold and 10-fold cross-validation random forest models (around 86%). For this prediction, we are going to use the 10-fold model, however, the difference between the 3 and 10 folds is not big when talking about accuracy, but significant when talking about computing time. 
 
 ```{r pred, eval=FALSE}
 prediction <- predict(model10, newdata = test_data)
